--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react-dom": "17.0.2",
     "react-html-parser": "^2.0.2",
     "react-reveal": "^1.2.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
+    "postcss": "^8.3.11"
   }
 }
