--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/aspect-ratio": "^0.3.0",
+    "dotenv": "^16.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
