feat: front --> email api integration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/aspect-ratio": "^0.3.0",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
