--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "axios": "^0.26.1",
