--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
     "react-html-parser": "^2.0.2",
     "sass": "^1.43.4",
     "tailwindcss": "^3.0.23"
