--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
+    "html-react-parser": "^5.1.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
-    "react-html-parser": "^2.0.2",
     "sass": "^1.43.4",
     "tailwindcss": "^3.0.23"
   },
